# moketest

./: CMakeLists.txt
include/moketest/: common.hpp  comparator.hpp  executor.hpp  generator.hpp  profiler.hpp  result.hpp
src/: CMakeLists.txt  comparator.cpp  device_profiler.cu  device_profiler.hip  host_profiler.cpp
testzoo/: CMakeLists.txt
testzoo/color_to_grayscale/: CMakeLists.txt  color_to_grayscale.cpp  color_to_grayscale.hpp
testzoo/vector_add/: CMakeLists.txt  vector_add.cpp  vector_add.hpp
